parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> upper_statement
Rule 1     upper_statement -> START_PROG middle_statement END_PROG
Rule 2     function -> BLOCK TEXT ABRE_COLCH declarator upper_statement
Rule 3     function_call -> TEXT ABRE_COLCH declarator
Rule 4     declarator -> VAR FECHA_COLCH
Rule 5     declarator -> FECHA_COLCH
Rule 6     declarator -> VAR VIRG declarator
Rule 7     declarator -> expression FECHA_COLCH
Rule 8     declarator -> expression VIRG FECHA_COLCH
Rule 9     upper_statement -> ABRE_STATE middle_statement FECHA_STATE
Rule 10    middle_statement -> statement middle_statement
Rule 11    middle_statement -> statement
Rule 12    statement -> IF ABRE_COLCH expression FECHA_COLCH upper_statement
Rule 13    statement -> IF ABRE_COLCH expression FECHA_COLCH upper_statement ELSE upper_statement
Rule 14    statement -> WHILE ABRE_COLCH expression FECHA_COLCH upper_statement
Rule 15    statement -> upper_statement
Rule 16    statement -> RETURN expression END_STATE
Rule 17    statement -> END_STATE
Rule 18    statement -> SHOW expression END_STATE
Rule 19    statement -> VAR EQUAL expression END_STATE
Rule 20    statement -> function
Rule 21    statement -> function_call END_STATE
Rule 22    expression -> relexpr
Rule 23    relexpr -> expr
Rule 24    relexpr -> relexpr LESS expr
Rule 25    relexpr -> relexpr LESS_EQ expr
Rule 26    relexpr -> relexpr GREATER expr
Rule 27    relexpr -> relexpr GREATER_EQ expr
Rule 28    relexpr -> relexpr EQTO expr
Rule 29    expr -> term
Rule 30    expr -> expr MAIS term
Rule 31    expr -> expr MENOS term
Rule 32    expr -> expr OR term
Rule 33    expr -> expr CONCAT term
Rule 34    term -> factor
Rule 35    term -> term VEZES factor
Rule 36    term -> term DIVIDE factor
Rule 37    term -> term AND factor
Rule 38    factor -> INTEGER
Rule 39    factor -> MAIS factor
Rule 40    factor -> MENOS factor
Rule 41    factor -> NOT factor
Rule 42    factor -> ABRE_PAREN relexpr FECHA_PAREN
Rule 43    factor -> ASP TEXT ASP
Rule 44    factor -> TRUE
Rule 45    factor -> FALSE
Rule 46    factor -> READ ABRE_COLCH FECHA_COLCH
Rule 47    factor -> function_call

Terminals, with rules where they appear

ABRE_COLCH           : 2 3 12 13 14 46
ABRE_PAREN           : 42
ABRE_STATE           : 9
AND                  : 37
ASP                  : 43 43
BLOCK                : 2
CONCAT               : 33
DIVIDE               : 36
ELSE                 : 13
END_PROG             : 1
END_STATE            : 16 17 18 19 21
EQTO                 : 28
EQUAL                : 19
FALSE                : 45
FECHA_COLCH          : 4 5 7 8 12 13 14 46
FECHA_PAREN          : 42
FECHA_STATE          : 9
GREATER              : 26
GREATER_EQ           : 27
IF                   : 12 13
INTEGER              : 38
LESS                 : 24
LESS_EQ              : 25
MAIS                 : 30 39
MENOS                : 31 40
NOT                  : 41
OR                   : 32
READ                 : 46
RETURN               : 16
SHOW                 : 18
START_PROG           : 1
TEXT                 : 2 3 43
TRUE                 : 44
VAR                  : 4 6 19
VEZES                : 35
VIRG                 : 6 8
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

declarator           : 2 3 6
expr                 : 23 24 25 26 27 28 30 31 32 33
expression           : 7 8 12 13 14 16 18 19
factor               : 34 35 36 37 39 40 41
function             : 20
function_call        : 21 47
middle_statement     : 1 9 10
relexpr              : 22 24 25 26 27 28 42
statement            : 10 11
term                 : 29 30 31 32 33 35 36 37
upper_statement      : 2 12 13 13 14 15 0

Parsing method: LALR

state 0

    (0) S' -> . upper_statement
    (1) upper_statement -> . START_PROG middle_statement END_PROG
    (9) upper_statement -> . ABRE_STATE middle_statement FECHA_STATE

    START_PROG      shift and go to state 2
    ABRE_STATE      shift and go to state 3

    upper_statement                shift and go to state 1

state 1

    (0) S' -> upper_statement .



state 2

    (1) upper_statement -> START_PROG . middle_statement END_PROG
    (10) middle_statement -> . statement middle_statement
    (11) middle_statement -> . statement
    (12) statement -> . IF ABRE_COLCH expression FECHA_COLCH upper_statement
    (13) statement -> . IF ABRE_COLCH expression FECHA_COLCH upper_statement ELSE upper_statement
    (14) statement -> . WHILE ABRE_COLCH expression FECHA_COLCH upper_statement
    (15) statement -> . upper_statement
    (16) statement -> . RETURN expression END_STATE
    (17) statement -> . END_STATE
    (18) statement -> . SHOW expression END_STATE
    (19) statement -> . VAR EQUAL expression END_STATE
    (20) statement -> . function
    (21) statement -> . function_call END_STATE
    (1) upper_statement -> . START_PROG middle_statement END_PROG
    (9) upper_statement -> . ABRE_STATE middle_statement FECHA_STATE
    (2) function -> . BLOCK TEXT ABRE_COLCH declarator upper_statement
    (3) function_call -> . TEXT ABRE_COLCH declarator

    IF              shift and go to state 6
    WHILE           shift and go to state 8
    RETURN          shift and go to state 9
    END_STATE       shift and go to state 10
    SHOW            shift and go to state 11
    VAR             shift and go to state 12
    START_PROG      shift and go to state 2
    ABRE_STATE      shift and go to state 3
    BLOCK           shift and go to state 15
    TEXT            shift and go to state 16

    middle_statement               shift and go to state 4
    statement                      shift and go to state 5
    upper_statement                shift and go to state 7
    function                       shift and go to state 13
    function_call                  shift and go to state 14

state 3

    (9) upper_statement -> ABRE_STATE . middle_statement FECHA_STATE
    (10) middle_statement -> . statement middle_statement
    (11) middle_statement -> . statement
    (12) statement -> . IF ABRE_COLCH expression FECHA_COLCH upper_statement
    (13) statement -> . IF ABRE_COLCH expression FECHA_COLCH upper_statement ELSE upper_statement
    (14) statement -> . WHILE ABRE_COLCH expression FECHA_COLCH upper_statement
    (15) statement -> . upper_statement
    (16) statement -> . RETURN expression END_STATE
    (17) statement -> . END_STATE
    (18) statement -> . SHOW expression END_STATE
    (19) statement -> . VAR EQUAL expression END_STATE
    (20) statement -> . function
    (21) statement -> . function_call END_STATE
    (1) upper_statement -> . START_PROG middle_statement END_PROG
    (9) upper_statement -> . ABRE_STATE middle_statement FECHA_STATE
    (2) function -> . BLOCK TEXT ABRE_COLCH declarator upper_statement
    (3) function_call -> . TEXT ABRE_COLCH declarator

    IF              shift and go to state 6
    WHILE           shift and go to state 8
    RETURN          shift and go to state 9
    END_STATE       shift and go to state 10
    SHOW            shift and go to state 11
    VAR             shift and go to state 12
    START_PROG      shift and go to state 2
    ABRE_STATE      shift and go to state 3
    BLOCK           shift and go to state 15
    TEXT            shift and go to state 16

    middle_statement               shift and go to state 17
    statement                      shift and go to state 5
    upper_statement                shift and go to state 7
    function                       shift and go to state 13
    function_call                  shift and go to state 14

state 4

    (1) upper_statement -> START_PROG middle_statement . END_PROG

    END_PROG        shift and go to state 18


state 5

    (10) middle_statement -> statement . middle_statement
    (11) middle_statement -> statement .
    (10) middle_statement -> . statement middle_statement
    (11) middle_statement -> . statement
    (12) statement -> . IF ABRE_COLCH expression FECHA_COLCH upper_statement
    (13) statement -> . IF ABRE_COLCH expression FECHA_COLCH upper_statement ELSE upper_statement
    (14) statement -> . WHILE ABRE_COLCH expression FECHA_COLCH upper_statement
    (15) statement -> . upper_statement
    (16) statement -> . RETURN expression END_STATE
    (17) statement -> . END_STATE
    (18) statement -> . SHOW expression END_STATE
    (19) statement -> . VAR EQUAL expression END_STATE
    (20) statement -> . function
    (21) statement -> . function_call END_STATE
    (1) upper_statement -> . START_PROG middle_statement END_PROG
    (9) upper_statement -> . ABRE_STATE middle_statement FECHA_STATE
    (2) function -> . BLOCK TEXT ABRE_COLCH declarator upper_statement
    (3) function_call -> . TEXT ABRE_COLCH declarator

    END_PROG        reduce using rule 11 (middle_statement -> statement .)
    FECHA_STATE     reduce using rule 11 (middle_statement -> statement .)
    IF              shift and go to state 6
    WHILE           shift and go to state 8
    RETURN          shift and go to state 9
    END_STATE       shift and go to state 10
    SHOW            shift and go to state 11
    VAR             shift and go to state 12
    START_PROG      shift and go to state 2
    ABRE_STATE      shift and go to state 3
    BLOCK           shift and go to state 15
    TEXT            shift and go to state 16

    statement                      shift and go to state 5
    middle_statement               shift and go to state 19
    upper_statement                shift and go to state 7
    function                       shift and go to state 13
    function_call                  shift and go to state 14

state 6

    (12) statement -> IF . ABRE_COLCH expression FECHA_COLCH upper_statement
    (13) statement -> IF . ABRE_COLCH expression FECHA_COLCH upper_statement ELSE upper_statement

    ABRE_COLCH      shift and go to state 20


state 7

    (15) statement -> upper_statement .

    IF              reduce using rule 15 (statement -> upper_statement .)
    WHILE           reduce using rule 15 (statement -> upper_statement .)
    RETURN          reduce using rule 15 (statement -> upper_statement .)
    END_STATE       reduce using rule 15 (statement -> upper_statement .)
    SHOW            reduce using rule 15 (statement -> upper_statement .)
    VAR             reduce using rule 15 (statement -> upper_statement .)
    START_PROG      reduce using rule 15 (statement -> upper_statement .)
    ABRE_STATE      reduce using rule 15 (statement -> upper_statement .)
    BLOCK           reduce using rule 15 (statement -> upper_statement .)
    TEXT            reduce using rule 15 (statement -> upper_statement .)
    END_PROG        reduce using rule 15 (statement -> upper_statement .)
    FECHA_STATE     reduce using rule 15 (statement -> upper_statement .)


state 8

    (14) statement -> WHILE . ABRE_COLCH expression FECHA_COLCH upper_statement

    ABRE_COLCH      shift and go to state 21


state 9

    (16) statement -> RETURN . expression END_STATE
    (22) expression -> . relexpr
    (23) relexpr -> . expr
    (24) relexpr -> . relexpr LESS expr
    (25) relexpr -> . relexpr LESS_EQ expr
    (26) relexpr -> . relexpr GREATER expr
    (27) relexpr -> . relexpr GREATER_EQ expr
    (28) relexpr -> . relexpr EQTO expr
    (29) expr -> . term
    (30) expr -> . expr MAIS term
    (31) expr -> . expr MENOS term
    (32) expr -> . expr OR term
    (33) expr -> . expr CONCAT term
    (34) term -> . factor
    (35) term -> . term VEZES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term AND factor
    (38) factor -> . INTEGER
    (39) factor -> . MAIS factor
    (40) factor -> . MENOS factor
    (41) factor -> . NOT factor
    (42) factor -> . ABRE_PAREN relexpr FECHA_PAREN
    (43) factor -> . ASP TEXT ASP
    (44) factor -> . TRUE
    (45) factor -> . FALSE
    (46) factor -> . READ ABRE_COLCH FECHA_COLCH
    (47) factor -> . function_call
    (3) function_call -> . TEXT ABRE_COLCH declarator

    INTEGER         shift and go to state 29
    MAIS            shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 30
    ABRE_PAREN      shift and go to state 31
    ASP             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    READ            shift and go to state 35
    TEXT            shift and go to state 16

    expression                     shift and go to state 22
    relexpr                        shift and go to state 23
    expr                           shift and go to state 24
    term                           shift and go to state 25
    factor                         shift and go to state 28
    function_call                  shift and go to state 36

state 10

    (17) statement -> END_STATE .

    IF              reduce using rule 17 (statement -> END_STATE .)
    WHILE           reduce using rule 17 (statement -> END_STATE .)
    RETURN          reduce using rule 17 (statement -> END_STATE .)
    END_STATE       reduce using rule 17 (statement -> END_STATE .)
    SHOW            reduce using rule 17 (statement -> END_STATE .)
    VAR             reduce using rule 17 (statement -> END_STATE .)
    START_PROG      reduce using rule 17 (statement -> END_STATE .)
    ABRE_STATE      reduce using rule 17 (statement -> END_STATE .)
    BLOCK           reduce using rule 17 (statement -> END_STATE .)
    TEXT            reduce using rule 17 (statement -> END_STATE .)
    END_PROG        reduce using rule 17 (statement -> END_STATE .)
    FECHA_STATE     reduce using rule 17 (statement -> END_STATE .)


state 11

    (18) statement -> SHOW . expression END_STATE
    (22) expression -> . relexpr
    (23) relexpr -> . expr
    (24) relexpr -> . relexpr LESS expr
    (25) relexpr -> . relexpr LESS_EQ expr
    (26) relexpr -> . relexpr GREATER expr
    (27) relexpr -> . relexpr GREATER_EQ expr
    (28) relexpr -> . relexpr EQTO expr
    (29) expr -> . term
    (30) expr -> . expr MAIS term
    (31) expr -> . expr MENOS term
    (32) expr -> . expr OR term
    (33) expr -> . expr CONCAT term
    (34) term -> . factor
    (35) term -> . term VEZES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term AND factor
    (38) factor -> . INTEGER
    (39) factor -> . MAIS factor
    (40) factor -> . MENOS factor
    (41) factor -> . NOT factor
    (42) factor -> . ABRE_PAREN relexpr FECHA_PAREN
    (43) factor -> . ASP TEXT ASP
    (44) factor -> . TRUE
    (45) factor -> . FALSE
    (46) factor -> . READ ABRE_COLCH FECHA_COLCH
    (47) factor -> . function_call
    (3) function_call -> . TEXT ABRE_COLCH declarator

    INTEGER         shift and go to state 29
    MAIS            shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 30
    ABRE_PAREN      shift and go to state 31
    ASP             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    READ            shift and go to state 35
    TEXT            shift and go to state 16

    expression                     shift and go to state 37
    relexpr                        shift and go to state 23
    expr                           shift and go to state 24
    term                           shift and go to state 25
    factor                         shift and go to state 28
    function_call                  shift and go to state 36

state 12

    (19) statement -> VAR . EQUAL expression END_STATE

    EQUAL           shift and go to state 38


state 13

    (20) statement -> function .

    IF              reduce using rule 20 (statement -> function .)
    WHILE           reduce using rule 20 (statement -> function .)
    RETURN          reduce using rule 20 (statement -> function .)
    END_STATE       reduce using rule 20 (statement -> function .)
    SHOW            reduce using rule 20 (statement -> function .)
    VAR             reduce using rule 20 (statement -> function .)
    START_PROG      reduce using rule 20 (statement -> function .)
    ABRE_STATE      reduce using rule 20 (statement -> function .)
    BLOCK           reduce using rule 20 (statement -> function .)
    TEXT            reduce using rule 20 (statement -> function .)
    END_PROG        reduce using rule 20 (statement -> function .)
    FECHA_STATE     reduce using rule 20 (statement -> function .)


state 14

    (21) statement -> function_call . END_STATE

    END_STATE       shift and go to state 39


state 15

    (2) function -> BLOCK . TEXT ABRE_COLCH declarator upper_statement

    TEXT            shift and go to state 40


state 16

    (3) function_call -> TEXT . ABRE_COLCH declarator

    ABRE_COLCH      shift and go to state 41


state 17

    (9) upper_statement -> ABRE_STATE middle_statement . FECHA_STATE

    FECHA_STATE     shift and go to state 42


state 18

    (1) upper_statement -> START_PROG middle_statement END_PROG .

    $end            reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    IF              reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    WHILE           reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    RETURN          reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    END_STATE       reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    SHOW            reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    VAR             reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    START_PROG      reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    ABRE_STATE      reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    BLOCK           reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    TEXT            reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    END_PROG        reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    FECHA_STATE     reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)
    ELSE            reduce using rule 1 (upper_statement -> START_PROG middle_statement END_PROG .)


state 19

    (10) middle_statement -> statement middle_statement .

    END_PROG        reduce using rule 10 (middle_statement -> statement middle_statement .)
    FECHA_STATE     reduce using rule 10 (middle_statement -> statement middle_statement .)


state 20

    (12) statement -> IF ABRE_COLCH . expression FECHA_COLCH upper_statement
    (13) statement -> IF ABRE_COLCH . expression FECHA_COLCH upper_statement ELSE upper_statement
    (22) expression -> . relexpr
    (23) relexpr -> . expr
    (24) relexpr -> . relexpr LESS expr
    (25) relexpr -> . relexpr LESS_EQ expr
    (26) relexpr -> . relexpr GREATER expr
    (27) relexpr -> . relexpr GREATER_EQ expr
    (28) relexpr -> . relexpr EQTO expr
    (29) expr -> . term
    (30) expr -> . expr MAIS term
    (31) expr -> . expr MENOS term
    (32) expr -> . expr OR term
    (33) expr -> . expr CONCAT term
    (34) term -> . factor
    (35) term -> . term VEZES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term AND factor
    (38) factor -> . INTEGER
    (39) factor -> . MAIS factor
    (40) factor -> . MENOS factor
    (41) factor -> . NOT factor
    (42) factor -> . ABRE_PAREN relexpr FECHA_PAREN
    (43) factor -> . ASP TEXT ASP
    (44) factor -> . TRUE
    (45) factor -> . FALSE
    (46) factor -> . READ ABRE_COLCH FECHA_COLCH
    (47) factor -> . function_call
    (3) function_call -> . TEXT ABRE_COLCH declarator

    INTEGER         shift and go to state 29
    MAIS            shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 30
    ABRE_PAREN      shift and go to state 31
    ASP             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    READ            shift and go to state 35
    TEXT            shift and go to state 16

    expression                     shift and go to state 43
    relexpr                        shift and go to state 23
    expr                           shift and go to state 24
    term                           shift and go to state 25
    factor                         shift and go to state 28
    function_call                  shift and go to state 36

state 21

    (14) statement -> WHILE ABRE_COLCH . expression FECHA_COLCH upper_statement
    (22) expression -> . relexpr
    (23) relexpr -> . expr
    (24) relexpr -> . relexpr LESS expr
    (25) relexpr -> . relexpr LESS_EQ expr
    (26) relexpr -> . relexpr GREATER expr
    (27) relexpr -> . relexpr GREATER_EQ expr
    (28) relexpr -> . relexpr EQTO expr
    (29) expr -> . term
    (30) expr -> . expr MAIS term
    (31) expr -> . expr MENOS term
    (32) expr -> . expr OR term
    (33) expr -> . expr CONCAT term
    (34) term -> . factor
    (35) term -> . term VEZES factor
    (36) term -> . term DIVIDE factor
    (37) term -> . term AND factor
    (38) factor -> . INTEGER
    (39) factor -> . MAIS factor
    (40) factor -> . MENOS factor
    (41) factor -> . NOT factor
    (42) factor -> . ABRE_PAREN relexpr FECHA_PAREN
    (43) factor -> . ASP TEXT ASP
    (44) factor -> . TRUE
    (45) factor -> . FALSE
    (46) factor -> . READ ABRE_COLCH FECHA_COLCH
    (47) factor -> . function_call
    (3) function_call -> . TEXT ABRE_COLCH declarator

    INTEGER         shift and go to state 29
    MAIS            shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 30
    ABRE_PAREN      shift and go to state 31
    ASP             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    READ            shift and go to state 35
    TEXT            shift and go to state 16

    expression                     shift and go to state 44
    relexpr                        shift and go to state 23
    expr                           shift and go to state 24
    term                           shift and go to state 25
    factor                         shift and go to state 28
    function_call                  shift and go to state 36

state 22

    (16) statement -> RETURN expression . END_STATE

    END_STATE       shift and go to state 45


state 23

    (22) expression -> relexpr .
    (24) relexpr -> relexpr . LESS expr
    (25) relexpr -> relexpr . LESS_EQ expr
    (26) relexpr -> relexpr . GREATER expr
    (27) relexpr -> relexpr . GREATER_EQ expr
    (28) relexpr -> relexpr . EQTO expr

    END_STATE       reduce using rule 22 (expression -> relexpr .)
    FECHA_COLCH     reduce using rule 22 (expression -> relexpr .)
    VIRG            reduce using rule 22 (expression -> relexpr .)
    LESS            shift and go to state 46
    LESS_EQ         shift and go to state 47
    GREATER         shift and go to state 48
    GREATER_EQ      shift and go to state 49
    EQTO            shift and go to state 50


state 24

    (23) relexpr -> expr .
    (30) expr -> expr . MAIS term
    (31) expr -> expr . MENOS term
    (32) expr -> expr . OR term
    (33) expr -> expr . CONCAT term

    LESS            reduce using rule 23 (relexpr -> expr .)
    LESS_EQ         reduce using rule 23 (relexpr -> expr .)
    GREATER         reduce using rule 23 (relexpr -> expr .)
    GREATER_EQ      reduce using rule 23 (relexpr -> expr .)
    EQTO            reduce using rule 23 (relexpr -> expr .)
    END_STATE       reduce using rule 23 (relexpr -> expr .)
    FECHA_COLCH     reduce using rule 23 (relexpr -> expr .)
    FECHA_PAREN     reduce using rule 23 (relexpr -> expr .)
    VIRG            reduce using rule 23 (relexpr -> expr .)
    MAIS            shift and go to state 51
    MENOS           shift and go to state 52
    OR              shift and go to state 53
    CONCAT          shift and go to state 54


state 25

    (29) expr -> term .
    (35) term -> term . VEZES factor
    (36) term -> term . DIVIDE factor
    (37) term -> term . AND factor

    MAIS            reduce using rule 29 (expr -> term .)
    MENOS           reduce using rule 29 (expr -> term .)
    OR              reduce using rule 29 (expr -> term .)
    CONCAT          reduce using rule 29 (expr -> term .)
    LESS            reduce using rule 29 (expr -> term .)
    LESS_EQ         reduce using rule 29 (expr -> term .)
    GREATER         reduce using rule 29 (expr -> term .)
    GREATER_EQ      reduce using rule 29 (expr -> term .)
    EQTO            reduce using rule 29 (expr -> term .)
    END_STATE       reduce using rule 29 (expr -> term .)
    FECHA_COLCH     reduce using rule 29 (expr -> term .)
    FECHA_PAREN     reduce using rule 29 (expr -> term .)
    VIRG            reduce using rule 29 (expr -> term .)
    VEZES           shift and go to state 55
    DIVIDE          shift and go to state 56
    AND             shift and go to state 57


state 26

    (39) factor -> MAIS . factor
    (38) factor -> . INTEGER
    (39) factor -> . MAIS factor
    (40) factor -> . MENOS factor
    (41) factor -> . NOT factor
    (42) factor -> . ABRE_PAREN relexpr FECHA_PAREN
    (43) factor -> . ASP TEXT ASP
    (44) factor -> . TRUE
    (45) factor -> . FALSE
    (46) factor -> . READ ABRE_COLCH FECHA_COLCH
    (47) factor -> . function_call
    (3) function_call -> . TEXT ABRE_COLCH declarator

    INTEGER         shift and go to state 29
    MAIS            shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 30
    ABRE_PAREN      shift and go to state 31
    ASP             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    READ            shift and go to state 35
    TEXT            shift and go to state 16

    factor                         shift and go to state 58
    function_call                  shift and go to state 36

state 27

    (40) factor -> MENOS . factor
    (38) factor -> . INTEGER
    (39) factor -> . MAIS factor
    (40) factor -> . MENOS factor
    (41) factor -> . NOT factor
    (42) factor -> . ABRE_PAREN relexpr FECHA_PAREN
    (43) factor -> . ASP TEXT ASP
    (44) factor -> . TRUE
    (45) factor -> . FALSE
    (46) factor -> . READ ABRE_COLCH FECHA_COLCH
    (47) factor -> . function_call
    (3) function_call -> . TEXT ABRE_COLCH declarator

    INTEGER         shift and go to state 29
    MAIS            shift and go to state 26
    MENOS           shift and go to state 27
    NOT             shift and go to state 30
    ABRE_PAREN      shift and go to state 31
    ASP             shift and go to state 32
    TRUE            shift and go to state 33
    FALSE           shift and go to state 34
    READ            shift and go to state 35
    TEXT            shift and go to state 16

    factor                         shift and go to state 59
    function_call                  shift and go to state 36

state 28

    (34) term -> factor .

    VEZES           reduce using rule 34 (term -> factor .)
    DIVIDE          reduce using rule 34 (term -> factor .)
    AND             reduce using rule 34 (term -> factor .)
    MAIS            reduce using rule 34 (term -> factor .)
    MENOS           reduce using rule 34 (term -> factor .)
    OR              reduce using rule 34 (term -> factor .)
    CONCAT          reduce using rule 34 (term -> factor .)
    LESS            reduce using rule 34 (term -> factor .)
    LESS_EQ         reduce using rule 34 (term -> factor .)
    GREATER         reduce using rule 34 (term -> factor .)
    GREATER_EQ      reduce using rule 34 (term -> factor .)
    EQTO            reduce using rule 34 (term -> factor .)
    END_STATE       reduce using rule 34 (term -> factor .)
    FECHA_COLCH     reduce using rule 34 (term -> factor .)
    FECHA_PAREN     reduce using rule 34 (term -> factor .)
    VIRG            reduce using rule 34 (term -> factor .)


state 29

    (38) factor -> INTEGER .
